<resources>
    <string name="app_name">NavigationDrawerSandbox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="passwort">Passwort</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="e_mail">E-Mail</string>
    <string name="registrieren">Registrieren</string>
    <string name="long_title_name_gym">Akademie für Selbstverteidigung Kassel</string>
</resources>
